fix activity labels wrap

--- a/client/src/styles/controls/activity-menu.scss
+++ b/client/src/styles/controls/activity-menu.scss
@@ -26,6 +26,7 @@
 
   .label {
     margin-left: .3rem;
+    white-space: nowrap;
   }
 }
 
